--- a/src/components/widgets/boxShadow/styles/boxShadow.css
+++ b/src/components/widgets/boxShadow/styles/boxShadow.css
@@ -1,22 +1,9 @@
-.form__group {
-  padding: 1rem;
-}
-.form__label {
-  font-size: 1.3rem;
-  font-weight: 500;
-  color: #344357;
-  margin-bottom: 0.5rem;
-}
-.form__control-wrap {
-}
-.form__control-select {
-}
-.form__control {
+.boxShadow__input {
   display: block;
-  width: 100%;
-  height: calc(2.879rem + 2px);
+  width: 1rem;
+  height: 1rem;
   padding: 0.4375rem 1rem;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: 400;
   line-height: 1.25rem;
   color: #3c4d62;
@@ -25,4 +12,10 @@
   border: 1px solid #dbdfea;
   border-radius: 4px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  outline: none;
+  margin-bottom: 1.3rem;
+}
+.boxShadow {
+  display: flex;
+  align-items: center;
 }
